[package]
name = "oxre"
version = "0.1.1"
edition = "2021"
description = "Blazingly fast React project scaffolder written in Rust"
authors = ["ddoemonn <ddoemonn@github.com>"]
license = "MIT"
repository = "https://github.com/ddoemonn/oxre"
homepage = "https://github.com/ddoemonn/oxre"
documentation = "https://github.com/ddoemonn/oxre"
readme = "README.md"
keywords = ["react", "scaffolding", "cli", "vite", "frontend"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
fs_extra = "1.3"
